--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 body{
   height: 100vh;
-  background-color: #134567;
-  color: white;
+  background-color: #ffffff;
+  color: #27272a;
   font-family: 'Poppins', sans-serif;
 }
