--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -4,16 +4,21 @@
     align-items: center;
     justify-content: center;
     gap: 50px;
-    margin: 100px 150px;
+    margin: 60px 150px;
 
 }
 .about-title{
     position: relative;
 }
 .about-title h1{
-    padding: 0 30px;
-    font-size: 80px;
+    padding: 0 10px;
+    font-size: 40px;
     font-weight: 600;
+}
+.about-title h1 span{
+    font-family: 'Edu NSW ACT Cursive', cursive;
+    font-weight: 600;
+    color:#b476fb;
 }
 .about-title img{
     position: absolute;
