--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,16 +1,54 @@
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 20px 170px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 190px;
+  padding: 15px 10px; /* use padding instead of margin */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: transparent;
+  z-index: 1000;
+  transition: background 0.3s ease, backdrop-filter 0.3s ease;
+}
+
+.navbar.blur {
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.2); /* semi-transparent dark tint */
+}
+
+.nav-menu li .anchor-link {
+  display: inline-block;
+  text-decoration: none;
+  color: #393939; /* default text color */
+  transition: all 0.3s ease; /* smooth scale + color transition */
+  position: relative;
+  border:2px solid #393939;
+  border-radius: 50px;
+  padding: 5px 24px;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.nav-menu li .anchor-link p {
+  margin: 0;
+  font-weight: 500;
+  transition: inherit;
+}
+
+.nav-menu li .anchor-link:hover {
+  transform: scaleX(1.03);
+  background-color: #393939;
+  color: white;
 }
 
 .nav-menu {
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 60px;
-    font-size: 20px;
+    gap: 20px;
+    padding-left: 120px;
 }
 
 .nav-menu li a {
@@ -23,14 +61,63 @@
     color: #FF8A00;
 }
 
-.nav-connect {
-    padding: 20px 40px;
+.nav-connect .anchor-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 20px 45px;
     border-radius: 50px;
-    background: linear-gradient(267deg, #FF8A00 0%, #E52E71 100%);
-    font-size: 22px;
+    background: linear-gradient(267deg, #FACC15 0%, #fad543 100%);
+    font-size: 13px;
     cursor: pointer;
     transition: 0.5s;
 }
 .nav-connect:hover {
     transform: scale(1.05);
+}
+.anchor-link{
+    text-decoration: none;
+    color: inherit;
+}
+@media (max-width: 768px) {
+    .navbar {
+        margin: 20px 50px;
+    }
+    .nav-menu {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 350px;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.9);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        z-index: 2;
+        
+    }
+    .nav-menu.active {
+        display: flex;
+    }
+    .nav-menu li {
+        font-size: 24px;
+    }
+    .nav-connect {
+        display: none;
+    }
+    .nav-mob-close {
+        display: block;
+        position: relative;
+        top: 30px;
+        left: 290px;
+        width: 30px;
+    }
+    .nav-mob-open {
+        display: block;
+        position: fixed;
+        right: 20px;
+    }
 }
