--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     gap: 50px;
-    margin: 60px 150px;
+    margin: 60px 110px;
 
 }
 .about-title{
@@ -30,42 +30,63 @@
     display: flex;
     gap: 80px;
 }
-.about-right{
+.about-top{
     display: flex;
-    flex-direction: column;
-    gap: 80px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 }
 .about-para{
     display: flex;
     flex-direction: column;
+    width: 45%;
     gap: 20px;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 500;
 }
-.about-skills{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.about-para span{
+    font-weight: 600;
+    color:#b476fb;
+    font-size: 26px;
 }
-.about-skill{
-    display: flex;
-    gap: 50px;
-    align-items: center;
-    transition: 0.3s;
+.about-skills {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px; 
+  justify-content: center;
+  margin-top: 20px;
+  width: 55%;
 }
-.about-skill p{
-    min-width: 150px;
-    font-size: 24px;
-    font-weight: 500;
+
+.about-skill {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  padding: 10px 0px;
+  border-radius: 12px;
+  transition: transform 0.3s, box-shadow 0.3s;
+  cursor: default;
+  width: 120px;
+  box-sizing: border-box;
 }
-.about-skill hr{
-    outline: none;
-    border: none;
-    width: 50%;
-    height: 8px;
-    border-radius: 50px;
-    background: linear-gradient(267deg, #FF8A00 0%, #E52E71 100%);
+
+.about-skill:hover {
+  transform: translateY(-5px);
+  outline: 5px dotted #c8b1ff;
 }
+
+.skill-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.skill-logo {
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+}
+
 .about-achievements{
     display: flex;
     width: 100%;
@@ -90,10 +111,6 @@
 .about-achievement p{
     font-size: 22px;
     font-weight: 500;
-}
-.about-skill:hover{
-    transform: scale(1.05);
-    transition: 0.3s;
 }
 .about-achievement:hover{
     transform: scale(1.15);
