--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,8 @@
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 190px;
+  justify-content: space-between;
+  gap: 50px;
   padding: 15px 10px; /* use padding instead of margin */
   position: fixed;
   top: 0;
@@ -30,7 +30,10 @@
   font-size: 13px;
   font-weight: 500;
 }
-
+.navbar img{
+    height: 50px;
+    width: auto;
+}
 .nav-menu li .anchor-link p {
   margin: 0;
   font-weight: 500;
@@ -45,10 +48,14 @@
 
 .nav-menu {
     display: flex;
-    align-items: center;
-    list-style: none;
-    gap: 20px;
-    padding-left: 120px;
+  align-items: center;
+  list-style: none;
+  gap: 20px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%); /* centers the menu horizontally */
+  margin: 0;
+  padding: 0;
 }
 
 .nav-menu li a {
@@ -61,63 +68,3 @@
     color: #FF8A00;
 }
 
-.nav-connect .anchor-link{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 20px 45px;
-    border-radius: 50px;
-    background: linear-gradient(267deg, #FACC15 0%, #fad543 100%);
-    font-size: 13px;
-    cursor: pointer;
-    transition: 0.5s;
-}
-.nav-connect:hover {
-    transform: scale(1.05);
-}
-.anchor-link{
-    text-decoration: none;
-    color: inherit;
-}
-@media (max-width: 768px) {
-    .navbar {
-        margin: 20px 50px;
-    }
-    .nav-menu {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 350px;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.9);
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-        z-index: 2;
-        
-    }
-    .nav-menu.active {
-        display: flex;
-    }
-    .nav-menu li {
-        font-size: 24px;
-    }
-    .nav-connect {
-        display: none;
-    }
-    .nav-mob-close {
-        display: block;
-        position: relative;
-        top: 30px;
-        left: 290px;
-        width: 30px;
-    }
-    .nav-mob-open {
-        display: block;
-        position: fixed;
-        right: 20px;
-    }
-}
