--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    gap: 80px;
     margin: 60px 110px;
 
 }
@@ -11,8 +11,9 @@
     position: relative;
 }
 .about-title h1{
+    margin-top: 50px;
     padding: 0 10px;
-    font-size: 40px;
+    font-size: 50px;
     font-weight: 600;
 }
 .about-title h1 span{
@@ -72,7 +73,8 @@
 
 .about-skill:hover {
   transform: translateY(-5px);
-  outline: 5px dotted #c8b1ff;
+  outline: 5px dotted #FACC15;
+  background-color: #fffbea;
 }
 
 .skill-header {
