--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,75 +1,21 @@
-.footer{
-    margin: 50px 170px;
+.footer-container{
+    width: 100%;
+    height: 100px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
-
-}
-.footer-top{
-    display: flex;
-    justify-content: space-between;
-}
-.footer-top-left{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-.footer-top-right{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    transition: color 0.3s ease;
-    align-items: center;
-}
-.footer-top-right h1{
-    font-size: 28px;
-    font-weight: 600;
-}
-.footer-top-right .footer-cards{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: start;
-}
-.footer-top-right .card{
-    display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    text-decoration: none;
-    color: white; 
+    gap: 10px;
+    background-color: #1a1a1a;
+    color: #ffffff;
 }
-.footer-top-right .card svg{
-   color: white;
-   width: 22px;
-   height: 22px;
-}
-.footer-top-right .card h3{
-    font-size: 18px;
+.footer-container .top{
+    color: rgb(153, 73, 228);
+    margin-top: 10px;
+    font-size: 12px;
     font-weight: 500;
 }
-.footer-top-right .card:hover h3,
-.footer-top-right .card:hover svg{
-    transform: scale(1.1);
-    color: aqua;
-}
-.footer-bottom{
-    display: flex;
-    justify-content: space-between;
-    font-size: 18px;
-}
-.footer-bottom-right{
-    display: flex;
-    gap: 50px;
-    margin-bottom: 50px;
-}
-.footer-bottom-right a{
-    text-decoration: none;
-    color: white;
-    transition: 0.3s ease
-}
-.footer-bottom-right a:hover{
-    text-decoration: none;
-    color: white;
-    transform: scale(1.1);
+.footer-container .bottom{
+    font-size: 16px;
+    font-weight: 400;
 }
